--- a/styles/components/input-panel.css
+++ b/styles/components/input-panel.css
@@ -1,15 +1,16 @@
 .input-panel {
   grid-template-columns: repeat(4, 1fr);
-  border: 3px solid red;
+  border: 3px solid var(--color-dark-primary);
   width: 60vw;
   max-height: 300px;
 }
 
 .input-panel * {
+  margin: 6px;
   text-align: center;
 }
 
-.input-panel *:not(:first-child):not(.color-selector) {
+.input-panel *:not(:first-child):not(.color-selector):not(.file-input) {
   place-self: center;
   font-size: 0.8rem;
   width: 100px;
@@ -26,7 +27,9 @@
 } */
 
 input[type='file'] {
-  width: 50px;
+  width: 60px;
+  font-size: 0.6rem;
+  grid-column: 4;
   white-space: inherit;
 }
 .color-selector {
