--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -1,10 +1,10 @@
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   .canvas-container {
     width: 500px;
     max-width: 500px;
     max-height: 500px;
   }
-}
+} */
 
 @media (max-width: 930px) {
   .main-content-container {
