--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,22 +1,72 @@
 .main-menu {
   background-color: var(--color-dark-primary);
-  margin-block-end: 3em;
+  /* margin-block-end: 3em; */
 }
 
 ul .main-menu {
   height: 160px;
-  align-items: center;
-  align-content: space-around;
 }
 
 .main-menu a {
-  height: 100%;
-  /* border: 1px solid red; */
+  margin: 20px;
   color: white;
 }
 
 h3 {
   font-size: 3em;
-  /* margin-block: 15px; */
   color: white;
+}
+
+/* ******** */
+
+.main-header {
+  position: relative;
+  background-color: var(--clr4);
+  color: var(--clr0);
+  z-index: 1;
+  box-shadow: inset 0px -6px 0 var(--clr6);
+}
+.main-header .nav {
+  background-color: var(--color-dark-primary);
+
+  height: 120px;
+}
+.main-header .main-nav {
+  margin-inline-end: 60px;
+  display: flex;
+  gap: 10px;
+  justify-self: center;
+  align-items: center;
+}
+
+.main-header .main-nav li {
+  border-inline-end: 1px solid var(--clr6);
+}
+
+.main-header .main-nav li:first-child {
+  border-inline-start: 1px solid var(--clr6);
+}
+
+.main-header .main-nav a {
+  width: var(--nav-height);
+  height: var(--nav-height);
+  align-items: center;
+  justify-content: center;
+
+  text-transform: uppercase;
+  display: flex;
+  color: inherit;
+  text-decoration: none;
+
+  transition: box-shadow 0.4s;
+}
+
+.main-header .main-nav a.active {
+  box-shadow: inset 0 -6px 0 #58c93a;
+  color: #58c93a;
+  cursor: auto;
+}
+
+.main-header .main-nav a:hover {
+  box-shadow: inset 0 -6px 0 #58c93a;
 }
