--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,10 +1,5 @@
 .main-menu {
   background-color: var(--color-dark-primary);
-  /* margin-block-end: 3em; */
-}
-
-ul .main-menu {
-  height: 160px;
 }
 
 .main-menu a {
@@ -12,39 +7,19 @@ ul .main-menu {
   color: white;
 }
 
-h3 {
-  font-size: 3em;
-  color: white;
-}
-
-/* ******** */
-
 .main-header {
   position: relative;
   background-color: var(--clr4);
   color: var(--clr0);
   z-index: 1;
   box-shadow: inset 0px -6px 0 var(--clr6);
+  margin-block-end: 30px;
 }
+
 .main-header .nav {
+  padding: 20px;
   background-color: var(--color-dark-primary);
-
   height: 120px;
-}
-.main-header .main-nav {
-  margin-inline-end: 60px;
-  display: flex;
-  gap: 10px;
-  justify-self: center;
-  align-items: center;
-}
-
-.main-header .main-nav li {
-  border-inline-end: 1px solid var(--clr6);
-}
-
-.main-header .main-nav li:first-child {
-  border-inline-start: 1px solid var(--clr6);
 }
 
 .main-header .main-nav a {
@@ -62,11 +37,11 @@ h3 {
 }
 
 .main-header .main-nav a.active {
-  box-shadow: inset 0 -6px 0 #58c93a;
+  box-shadow: inset 0 -6px 0 var(--color-selected);
   color: #58c93a;
   cursor: auto;
 }
 
 .main-header .main-nav a:hover {
-  box-shadow: inset 0 -6px 0 #58c93a;
+  box-shadow: inset 0 -6px 0 var(--color-selected);
 }
