--- a/styles/setup/mq.css
+++ b/styles/setup/mq.css
@@ -9,9 +9,9 @@
 @media (max-width: 930px) {
   .main-content-container {
     grid-template-columns: repeat(1, 1fr);
-    width: 60vw;
+    width: 400px;
     max-width: 500px;
-    max-height: 500px;
+    max-height: max-content;
   }
   .input-panel {
     width: max-content;
