--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -20,7 +20,11 @@
 }
 
 .gallery-container {
-  margin: 10px;
+  width: 90vw;
+  border: 6px solid var(--color-dark-primary);
+  border-radius: 6px;
+  margin: auto;
+  padding: 10px;
   gap: 10px;
 }
 
