--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@
 @import 'components/logo.css';
 @import 'components/canvas.css';
 @import 'components/input-panel.css';
+@import 'components/background-container.css';
+@import 'components/gallery.css';
 
 @import 'components/screen.css';
 
