Added slight UI improvements in the control panel

--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -14,8 +14,9 @@
 .input-panel {
   margin: auto;
   max-width: 450px;
+  min-width: 410px;
   display: grid;
-  gap: 10px;
+  gap: 4px;
   border-radius: 6px;
 }
 
